refactor: update blog post metadata

--- a/posts/build-a-blog-with-astro.mdx
+++ b/posts/build-a-blog-with-astro.mdx
@@ -11,9 +11,8 @@ tags:
     slug: "web-development"
   - tag: "Javascript"
     slug: "javascript"
-color: "#f7e6d8"
+color: "#F7E6D8"
 published: true
-views: 0
 lastModified: 1546468564564
 ---
 
