--- a/posts/introducing-openai-o1-preview.mdx
+++ b/posts/introducing-openai-o1-preview.mdx
@@ -13,8 +13,12 @@ tags:
     slug: "openai"
 color: "#F2DFFF"
 published: true
-views: 55
-lastModified: 1546468564564
+lastModified: 1731431623238
+faq:
+  - question: "¿Cuál es la tasa de límite de consultas para o1-preview?"
+    answer: "50 consultas por semana."
+  - question: "¿Qué tan seguro es o1-preview?"
+    answer: "En una escala de 0 a 100, o1-preview obtuvo una puntuación de 84 en una de las pruebas de seguridad más difíciles."
 ---
 
 Update on September 17, 2024: Rate limits are now 50 queries per week for o1-preview and 50 queries per day for o1-mini.
