--- a/posts/introducing-openai-o1-preview.mdx
+++ b/posts/introducing-openai-o1-preview.mdx
@@ -12,7 +12,7 @@ tags:
   - tag: "openai"
     slug: "openai"
 color: "#F2DFFF"
-published: true
+published: false
 lastModified: 1731431623238
 faq:
   - question: "¿Cuál es la tasa de límite de consultas para o1-preview?"
