chore: update article

--- a/posts/como-el-diseno-de-paginas-web-puede-transformar-tu-negocio.mdx
+++ b/posts/como-el-diseno-de-paginas-web-puede-transformar-tu-negocio.mdx
@@ -49,7 +49,9 @@ Otro ejemplo: una pequeña empresa de servicios legales que, gracias a un diseñ
 
 ## ¿Cómo puede ayudar Growiit?
 
-En **Growiit**, entendemos que cada negocio es único. Por eso ofrecemos soluciones personalizadas para ayudarte a destacar en el mundo digital. Nuestros servicios incluyen:  
+En **Growiit**, entendemos que cada negocio es único. Por eso ofrecemos soluciones personalizadas para ayudarte a destacar en el mundo digital. 
+
+### Nuestros servicios incluyen:  
 - **Diseño de páginas web a medida:** Desde cero y adaptado a tus necesidades.  
 - **Optimización para SEO:** Mejora de tu visibilidad en buscadores.  
 - **Diseño responsivo:** Garantía de que tu sitio se verá genial en cualquier dispositivo.  
