refactor: update image list of articles

--- a/posts/como-el-diseno-de-paginas-web-puede-transformar-tu-negocio.mdx
+++ b/posts/como-el-diseno-de-paginas-web-puede-transformar-tu-negocio.mdx
@@ -1,9 +1,19 @@
 ---
 title: "Cómo el diseño de páginas web puede transformar tu negocio"
 description: "Descubre cómo el diseño de páginas web profesional puede transformar tu negocio. Mejora la experiencia de usuario, posiciona tu marca y aumenta tus conversiones con un sitio web optimizado."
-image: 
-  src: "https://i.postimg.cc/ZRgXknDh/proceso-de-diseno-de-pagina-web.jpg"
-  alt: "Proceso de diseño de páginas web"
+images: 
+  - src: "https://d1ssfwckvhk5up.cloudfront.net/public/articles/diseno-de-paginas-web-transforma-negocios/proceso-de-diseno-de-pagina-web-size-card.webp"
+    alt: "Proceso de diseño de páginas web"
+    type: "thumbnail"
+  - src: "https://d1ssfwckvhk5up.cloudfront.net/public/articles/diseno-de-paginas-web-transforma-negocios/proceso-de-diseno-de-pagina-web-size-small.webp"
+    alt: "Proceso de diseño de páginas web"
+    type: "small"
+  - src: "https://d1ssfwckvhk5up.cloudfront.net/public/articles/diseno-de-paginas-web-transforma-negocios/proceso-de-diseno-de-pagina-web-size-large.webp"
+    alt: "Proceso de diseño de páginas web"
+    type: "large"
+  - src: "https://d1ssfwckvhk5up.cloudfront.net/public/articles/diseno-de-paginas-web-transforma-negocios/proceso-de-diseno-de-pagina-web-size-medium.webp"
+    alt: "Proceso de diseño de páginas web"
+    type: "og"
 author: "Pool Llerena"
 date: "2024/11/19"
 tags: 
@@ -43,7 +53,7 @@ Otro ejemplo: una pequeña empresa de servicios legales que, gracias a un diseñ
 
 **En Growiit**, diseñamos sitios enfocados en resultados, adaptándonos a las necesidades de cada industria.
 
-![Imagen de referencia](https://i.postimg.cc/dtFwDT3H/nails-studio-site-multi-view.png)
+![Imagen de referencia](https://d1ssfwckvhk5up.cloudfront.net/public/articles/diseno-de-paginas-web-transforma-negocios/nails-studio-site-multi-view.webp)
 
 ---
 
