--- a/posts/mejores-servicios-paginas-web-lima.mdx
+++ b/posts/mejores-servicios-paginas-web-lima.mdx
@@ -1,9 +1,20 @@
 ---
 title: "Servicios de páginas web en Lima para destacar en el mercado digital"
+slug: "mejores-servicios-paginas-web-lima"
 description: "Descubre los mejores servicios de páginas web en Lima. Mejora tu presencia online con diseño responsivo, SEO local y soluciones personalizadas."
-image: 
-  src: "https://i.postimg.cc/jq6Z0Xgj/disenando-pagina-web-en-lima.jpg"
-  alt: "Diseño de página web en Lima"
+images: 
+  - src: "https://d1ssfwckvhk5up.cloudfront.net/public/articles/mejores-servicios-paginas-web-lima/disenando-pagina-web-en-lima-size-card.webp"
+    alt: "Diseño de página web en Lima"
+    type: "thumbnail"
+  - src: "https://d1ssfwckvhk5up.cloudfront.net/public/articles/mejores-servicios-paginas-web-lima/disenando-pagina-web-en-lima-size-small.webp"
+    alt: "Diseño de página web en Lima"
+    type: "small"
+  - src: "https://d1ssfwckvhk5up.cloudfront.net/public/articles/mejores-servicios-paginas-web-lima/disenando-pagina-web-en-lima-size-large.webp"
+    alt: "Diseño de página web en Lima"
+    type: "large"
+  - src: "https://d1ssfwckvhk5up.cloudfront.net/public/articles/mejores-servicios-paginas-web-lima/disenando-pagina-web-en-lima-size-medium.webp"
+    alt: "Diseño de página web en Lima"
+    type: "og"
 author: "Pool Llerena"
 date: "2024/11/21"
 tags: 
@@ -58,7 +69,7 @@ La paciencia de los usuarios es limitada. Un hosting rápido y un sitio seguro n
 ### 4. Personalización  
 Cada negocio es único, y su sitio web también debería serlo. Los mejores servicios de diseño web ofrecen soluciones personalizadas que se adaptan a tus necesidades específicas.
 
-![Ejemplo de página web en Lima con diseño responsivo y optimización local](https://i.postimg.cc/bwDstqBF/restaurant-app.jpg)
+![Ejemplo de página web en Lima con diseño responsivo y optimización local](https://d1ssfwckvhk5up.cloudfront.net/public/articles/mejores-servicios-paginas-web-lima/restaurant-app.webp)
 
 ---
 
