--- a/posts/tendencias-en-seo-2025.mdx
+++ b/posts/tendencias-en-seo-2025.mdx
@@ -1,9 +1,20 @@
 ---
 title: "Tendencias en SEO 2025: Cómo Adaptar tu Estrategia a los Nuevos Retos"
+slug: "tendencias-en-seo"
 description: "Descubre las claves del SEO en 2025 y cómo Growiit puede ayudarte a optimizar tu sitio web con estrategias avanzadas para destacar en el mundo digital"
-image: 
-  src: "https://i.postimg.cc/Xv3fnZ20/novedades-seo-2025.png"
-  alt: "Diseño de página web en Lima"
+images: 
+  - src: "https://d1ssfwckvhk5up.cloudfront.net/public/articles/novedades-seo/novedades-seo-2025-size-card.webp"
+    alt: "Novedades en SEO 2025"
+    type: "thumbnail"
+  - src: "https://d1ssfwckvhk5up.cloudfront.net/public/articles/novedades-seo/novedades-seo-2025-size-small.webp"
+    alt: "Novedades en SEO 2025"
+    type: "small"
+  - src: "https://d1ssfwckvhk5up.cloudfront.net/public/articles/novedades-seo/novedades-seo-2025-size-large.webp"
+    alt: "Novedades en SEO 2025"
+    type: "large"
+  - src: "https://d1ssfwckvhk5up.cloudfront.net/public/articles/novedades-seo/novedades-seo-2025-size-medium.webp"
+    alt: "Novedades en SEO 2025"
+    type: "og"
 author: "Pool Llerena"
 date: "2024/11/22"
 tags: 
@@ -26,7 +37,7 @@ Cada año, Google introduce nuevas actualizaciones de sus algoritmos para mejora
 - Mejora la seguridad del sitio utilizando HTTPS.  
 - Asegúrate de que tu contenido sea accesible y relevante para las necesidades del usuario.  
 
-![Busqueda web en google](https://i.postimg.cc/CMPHgxTR/busqueda-web-en-google.jpg)
+![Busqueda web en google](https://d1ssfwckvhk5up.cloudfront.net/public/articles/novedades-seo/busqueda-web-en-google.webp)
 
 ---
 
@@ -38,7 +49,7 @@ La búsqueda por voz se consolida como una de las mayores **tendencias en SEO**.
 - Responde a preguntas frecuentes con respuestas claras y concisas.  
 - Optimiza tu sitio para micromomentos de búsqueda que se realizan desde dispositivos móviles.  
 
-![Búsqueda por voz](https://i.postimg.cc/rwpJ4R1C/busqueda-por-voz.jpg)
+![Búsqueda por voz](https://d1ssfwckvhk5up.cloudfront.net/public/articles/novedades-seo/busqueda-por-voz.webp)
 
 ---
 
@@ -51,7 +62,7 @@ El **SEO técnico** sigue siendo un pilar fundamental en 2025. Los sitios deben 
 - Implementa tecnologías como AMP (Accelerated Mobile Pages).  
 - Diseña para mobile-first index, asegurando que toda la información esté accesible desde dispositivos móviles.  
 
-![Diseño de sitio web](https://i.postimg.cc/0Nw7GYbm/diseno-de-sitio-web.jpg)
+![Diseño de sitio web](https://d1ssfwckvhk5up.cloudfront.net/public/articles/novedades-seo/diseno-de-sitio-web.webp)
 
 ---
 
@@ -64,7 +75,7 @@ El contenido visual, como imágenes y videos, es cada vez más relevante en las 
 - Acompaña los videos con descripciones optimizadas y transcripciones.  
 - Utiliza datos estructurados para destacar en las búsquedas.  
 
-![optimizacion de imágenes](https://i.postimg.cc/Z59NZ8Pg/optimizacion-de-imagenes.jpg)
+![optimizacion de imágenes](https://d1ssfwckvhk5up.cloudfront.net/public/articles/novedades-seo/optimizacion-de-imagenes.webp)
 
 ---
 
@@ -76,7 +87,7 @@ El **SEO local** es esencial para empresas que buscan captar clientes cercanos.
 - Utiliza palabras clave geolocalizadas como el nombre de tu ciudad o región.  
 - Fomenta reseñas online de clientes, ya que tienen un impacto significativo en la clasificación local.  
 
-![SEO local](https://i.postimg.cc/yxQJCxDs/seo-local.jpg)
+![SEO local](https://d1ssfwckvhk5up.cloudfront.net/public/articles/novedades-seo/seo-local.webp)
 
 ---
 
@@ -87,7 +98,7 @@ La utilización de datos estructurados (schema markup) facilita que los motores 
 - Usa herramientas como Google Data Highlighter para marcar datos clave.  
 - Mejora la visualización de tus resultados con microdatos y marcadores semánticos.  
 
-![Tendencias en SEO](https://i.postimg.cc/yxXPmFpn/imagen-seo.jpg)
+![Tendencias en SEO](https://d1ssfwckvhk5up.cloudfront.net/public/articles/novedades-seo/imagen-seo.webp)
 
 ---
 
